--- a/index.html
+++ b/index.html
@@ -21,12 +21,27 @@
             several of these strategies.</p>            
           </div>
         </div>
-        
+      </div>
+
+      <div class="row">
+        <div class="span12">
+          Documentation and examples are tailored for a specific version of Carrot<sup>2</sup> and Solr.
+        </div>
+      </div>
+
+      <div class="row" style="margin-top: 2em;">
         <div class="span2">
-          <div class="well"><a href="c2-3.6.3.html">
+          <div class="well"><a href="carrot2-3.6.3/">
             Carrot<sup>2</sup> 3.6.3<br/>
-            Solr 4.0</a>
-          </div>        
+            Solr 4.2.1</a>
+          </div>
+        </div>
+
+        <div class="span2">
+          <div class="well"><a href="carrot2-3.7.0/">
+            Carrot<sup>2</sup> 3.7.0<br/>
+            Solr 4.2.1</a>
+          </div>
         </div>
       </div>
     </div>
