--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 
       <div class="row" style="margin-top: 2em;">
         <div class="span2">
-          <div class="well"><a href="carrot2-3.6.3/">
+          <div class="well"><a href="carrot2-3.6.3/index.html">
             Carrot<sup>2</sup> 3.6.3<br/>
             Solr 4.2.1</a>
           </div>
         </div>
 
         <div class="span2">
-          <div class="well"><a href="carrot2-3.7.0/">
+          <div class="well"><a href="carrot2-3.7.0/index.html">
             Carrot<sup>2</sup> 3.7.0<br/>
             Solr 4.2.1</a>
           </div>
