Carrot2 1.8.0 and Solr 4.5-SNAPSHOT, docs updated.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             Solr 4.2.1</a>
           </div>
         </div>
+
+        <div class="span2">
+          <div class="well"><a href="carrot2-3.8.0/index.html">
+            Carrot<sup>2</sup> 3.8.0<br/>
+            Solr 4.5 (SNAPSHOT)</a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
