--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="span2">
           <div class="well"><a href="carrot2-3.8.0/index.html">
             Carrot<sup>2</sup> 3.8.0<br/>
-            Solr 4.5 (SNAPSHOT)</a>
+            Solr 4.6</a>
           </div>
         </div>
       </div>
